# electricity-prices

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  package.json  tailwind.config.js  tailwind.input.css
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: docs.yml  release.yml
assets/: tailwind.css
docs/superpowers/plans/: 2026-06-13-fi-energy-dashboard.md
docs/superpowers/specs/: 2026-06-13-fi-energy-dashboard-design.md
entsoe/: Cargo.toml
entsoe/src/: client.rs  errors.rs  lib.rs
entsoe/src/endpoints/: flows.rs  generation.rs  load.rs  mod.rs  prices.rs
entsoe/src/models/: acknowledgement.rs  flows.rs  generation.rs  mod.rs  prices.rs  request.rs
src/: main.rs
src/components/: app.rs  common.rs  mod.rs  nav.rs
src/components/charts/: flow_map.rs  forecast_line.rs  generation_pie.rs  mod.rs  price_chart.rs
src/components/pages/: flows.rs  forecast.rs  generation.rs  grid.rs  mod.rs  overview.rs  prices.rs
src/server/: cache.rs  entso.rs  mod.rs
